Update: fixed header layout and replaced video

--- a/Get.html
+++ b/Get.html
@@ -453,7 +453,7 @@
             <!-- Add navigation links here if needed -->
         </ul>
         <div class="auth-buttons">
-            <a href="#" class="btn btn-signup">Get Started</a>
+            <a href="index.html" class="btn btn-signup">Home</a>
         </div>
     </nav>
 
