--- a/index.html
+++ b/index.html
@@ -1030,8 +1030,8 @@
         </div>
         <div class="feature">
             <div class="feature-icon">🎯</div>
-            <h3 class="feature-title">Live Sports</h3>
-            <p class="feature-description">Stream top sp events, including football and more.</p>
+            <h3 class="feature-title">Live Events</h3>
+            <p class="feature-description">Stream top events, including concerts, conferences and more.</p>
         </div>
         <div class="feature">
             <div class="feature-icon">💸</div>
