Update: fixed header layout and replaced video

--- a/terms.html
+++ b/terms.html
@@ -466,7 +466,7 @@
     <nav class="navbar" aria-label="Main navigation">
         <div class="nav-content">
             <a href="index.html" class="logo" aria-label="BingeBay Home">
-                <img src="images/BL.SVG" alt="BingeBay Logo" class="logo-img">
+                <img src="images/BL.svg" alt="BingeBay Logo" class="logo-img">
             </a>
         </div>
     </nav>
