Update: fixed header layout and replaced video

--- a/index.html
+++ b/index.html
@@ -1139,15 +1139,16 @@
             </div>
             <div class="footer-column">
                 <h3 class="footer-heading">Navigation</h3>
-                
+                <ul class="footer-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Become a provider</a></li>
+                </ul>
             </div>
             <div class="footer-column">
                 <h3 class="footer-heading">Legal</h3>
                 <ul class="footer-links">
                     <li><a href="terms.html">Terms of Service</a></li>
                     <li><a href="privacy.html">Privacy Policy</a></li>
-                    <li><a href="#">Cookie Policy</a></li>
-                    <li><a href="#">GDPR</a></li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -1155,8 +1156,7 @@
                 <ul class="footer-links">
                     <li><a href="Help.html">Help Center</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">System Requirements</a></li>
+        
                 </ul>
             </div>
         </div>
