Update: fixed header layout and replaced video

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
         </ul>
         <div class="auth-buttons">
             
-            <a href="#" class="btn btn-signup">Get Started</a>
+            <a href="Get.html" class="btn btn-signup">Get Started</a>
         </div>
     </nav>
 
@@ -1127,13 +1127,10 @@
                 
                 <div class="social-links">
                     <a href="https://www.instagram.com/" class="social-link" target="_blank" aria-label="Instagram">
-                        <img src="images/instagram.svg" alt="Instagram" style="height:24px;width:24px;">
+                        <img src="images/ig1.png" alt="Instagram" style="height:24px;width:24px;">
                     </a>
-                    <a href="https://www.twitter.com/" class="social-link" target="_blank" aria-label="Twitter">
-                        <img src="images/twitter.svg" alt="Twitter" style="height:24px;width:24px;">
-                    </a>
-                    <a href="https://www.linkedin.com/" class="social-link" target="_blank" aria-label="LinkedIn">
-                        <img src="images/linkedin.svg" alt="LinkedIn" style="height:24px;width:24px;">
+                    <a href="https://x.com/bingebay_?t=zZVkonq2YgeftG6MiwIM_Q&s=09" class="social-link" target="_blank" aria-label="Twitter">
+                        <img src="images/x.png" alt="Twitter" style="height:24px;width:24px;">
                     </a>
                 </div>
             </div>
