Update: fixed header layout and replaced video

--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="https://www.instagram.com/" class="social-link" target="_blank" aria-label="Instagram">
+                    <a href="https://www.instagram.com/bingebay_?utm_source=qr&igsh=dm9kbmhwNHUyaGV6" class="social-link" target="_blank" aria-label="Instagram">
                         <img src="images/ig1.png" alt="Instagram" style="height:24px;width:24px;">
                     </a>
                     <a href="https://x.com/bingebay_?t=zZVkonq2YgeftG6MiwIM_Q&s=09" class="social-link" target="_blank" aria-label="Twitter">
