Update: fixed header layout and replaced video

--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
                         <img src="images/ig1.png" alt="Instagram" style="height:24px;width:24px;">
                     </a>
                     <a href="https://x.com/bingebay_?t=zZVkonq2YgeftG6MiwIM_Q&s=09" class="social-link" target="_blank" aria-label="Twitter">
-                        <img src="images/x.png" alt="Twitter" style="height:24px;width:24px;">
+                        <img src="images/x.PNG" alt="Twitter" style="height:24px;width:24px;">
                     </a>
                 </div>
             </div>
