--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
                 <h3 class="footer-heading">Support</h3>
                 <ul class="footer-links">
                     <li><a href="Help.html">Help Center</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="Contact.html">Contact Us</a></li>
         
                 </ul>
             </div>
