--- a/terms.html
+++ b/terms.html
@@ -353,12 +353,88 @@
         }
 
         /* Footer */
-        .footer {
-            text-align: center;
-            padding: 1.5rem;
+        footer {
+            background: rgba(0, 0, 0, 0.8);
+            color: rgba(255, 255, 255, 0.7);
+            padding: 50px 20px;
+            backdrop-filter: blur(10px);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .footer-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 30px;
+        }
+
+        .footer-logo {
+            font-size: 28px;
+            font-weight: bold;
+            background: linear-gradient(45deg, #ff1493, #00bfff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+
+        .footer-description {
             font-size: 0.9rem;
-            color: var(--text-light);
-            opacity: 0.8;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 15px;
+        }
+
+        .social-link {
+            color: white;
+            font-size: 1.2rem;
+            transition: all 0.3s ease;
+        }
+
+        .social-link:hover {
+            color: #00bfff;
+            transform: translateY(-3px);
+        }
+
+        .footer-heading {
+            font-size: 1.2rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+            color: white;
+        }
+
+        .footer-links {
+            list-style: none;
+        }
+
+        .footer-links li {
+            margin-bottom: 10px;
+        }
+
+        .footer-links a {
+            color: rgba(255, 255, 255, 0.7);
+            text-decoration: none;
+            transition: all 0.3s ease;
+            font-size: 0.9rem;
+        }
+
+        .footer-links a:hover {
+            color: #00bfff;
+            padding-left: 5px;
+        }
+
+        .footer-bottom {
+            text-align: center;
+            padding-top: 30px;
+            margin-top: 30px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            font-size: 0.8rem;
         }
 
         /* Responsive Design */
@@ -639,8 +715,47 @@
     <a href="#" class="back-to-top" aria-label="Back to top" title="Back to top">↑</a>
 
     <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025.</p>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <div class="logo">
+                    <img src="images/BL.svg" alt="Bingebay Logo" style="height:150px; width:auto; display:block;">
+                </div>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/bingebay_?utm_source=qr&igsh=dm9kbmhwNHUyaGV6" class="social-link" target="_blank" aria-label="Instagram">
+                        <img src="images/ig1.png" alt="Instagram" style="height:24px;width:24px;">
+                    </a>
+                    <a href="https://x.com/bingebay_?t=zZVkonq2YgeftG6MiwIM_Q&s=09" class="social-link" target="_blank" aria-label="Twitter">
+                        <img src="images/x.PNG" alt="Twitter" style="height:24px;width:24px;">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-heading">Navigation</h3>
+                <ul class="footer-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Become a provider</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-heading">Legal</h3>
+                <ul class="footer-links">
+                    <li><a href="terms.html">Terms of Service</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-heading">Support</h3>
+                <ul class="footer-links">
+                    <li><a href="Help.html">Help Center</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Bingebay. All rights reserved.</p>
+        </div>
+        <!-- Your existing footer remains the same -->
     </footer>
 
     <script>
