--- a/Get.html
+++ b/Get.html
@@ -507,9 +507,9 @@
         <div class="footer-content">
             <p>&copy; 2025 BingeBay.</p>
             <p>
-                <a href="#">Privacy Policy</a> | 
-                <a href="#">Terms of Service</a> | 
-                <a href="#">Contact Us</a>
+                <a href="privacy.html">Privacy Policy</a> | 
+                <a href="terms.html">Terms of Service</a> | 
+                <a href="Contact.html">Contact Us</a>
             </p>
         </div>
     </footer>
