Update: fixed header layout and replaced video

--- a/index.html
+++ b/index.html
@@ -978,7 +978,6 @@
                     </p>
                     <div class="cta-buttons">
                         <a href="Get.html" class="btn btn-primary">Become A Provider</a>
-                        
                     </div>
                 </div>
             </div>
@@ -1138,7 +1137,7 @@
                 <h3 class="footer-heading">Navigation</h3>
                 <ul class="footer-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Become a provider</a></li>
+                    <li><a href="Get.html">Become a provider</a></li>
                 </ul>
             </div>
             <div class="footer-column">
