--- a/Help.html
+++ b/Help.html
@@ -489,6 +489,32 @@
                 height: 18px;
                 left: 0.85rem;
             }
+
+            .footer-container {
+                display: flex !important;
+                flex-direction: column !important;
+                align-items: center !important;
+                justify-content: center !important;
+                text-align: center !important;
+                gap: 20px !important;
+            }
+            .footer-column {
+                align-items: center !important;
+                justify-content: center !important;
+                text-align: center !important;
+                display: flex !important;
+                flex-direction: column !important;
+                width: 100% !important;
+            }
+            .footer-logo, .footer-heading, .footer-links, .footer-description {
+                text-align: center !important;
+                width: 100% !important;
+            }
+            .social-links {
+                justify-content: center !important;
+                display: flex !important;
+                width: 100% !important;
+            }
         }
 
         @media (max-width: 480px) {
@@ -529,6 +555,14 @@
 
             .glass-card {
                 padding: 1.25rem;
+            }
+
+            .footer-container {
+                padding: 0 !important;
+                gap: 10px !important;
+            }
+            .footer-column {
+                padding: 0 !important;
             }
         }
 
