--- a/index.html
+++ b/index.html
@@ -874,6 +874,12 @@
                 text-align: center;
             }
             
+            .footer-column .logo {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            
             .social-links {
                 justify-content: center;
             }
