--- a/privacy.html
+++ b/privacy.html
@@ -577,8 +577,39 @@
             .sidebar-card {
                 padding: 1rem;
             }
-        }
 
+            .footer-column .logo {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .footer-container {
+                display: flex !important;
+                flex-direction: column !important;
+                align-items: center !important;
+                justify-content: center !important;
+                text-align: center !important;
+                gap: 20px !important;
+            }
+            .footer-column {
+                align-items: center !important;
+                justify-content: center !important;
+                text-align: center !important;
+                display: flex !important;
+                flex-direction: column !important;
+                width: 100% !important;
+            }
+            .footer-logo, .footer-heading, .footer-links, .footer-description {
+                text-align: center !important;
+                width: 100% !important;
+            }
+            .social-links {
+                justify-content: center !important;
+                display: flex !important;
+                width: 100% !important;
+            }
+        }
         @media (max-width: 480px) {
             .content {
                 padding: 1rem;
@@ -586,6 +617,14 @@
             
             .nav-container {
                 padding: 1rem;
+            }
+
+            .footer-container {
+                padding: 0 !important;
+                gap: 10px !important;
+            }
+            .footer-column {
+                padding: 0 !important;
             }
         }
 
