--- a/terms.html
+++ b/terms.html
@@ -483,6 +483,22 @@
             .nav-container {
                 top: calc(var(--nav-height) + 5px);
             }
+
+            .footer-container {
+                grid-template-columns: 1fr;
+                text-align: center;
+            }
+            .footer-column {
+                text-align: center;
+            }
+            .footer-column .logo {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .social-links {
+                justify-content: center;
+            }
         }
 
         @media (max-width: 480px) {
