Update: fixed header layout and replaced video

--- a/Help.html
+++ b/Help.html
@@ -75,23 +75,21 @@
         }
 
         .btn-signup {
-            background: linear-gradient(45deg, #0ea5e9, #38bdf8, #7dd3fc);
+            background: linear-gradient(45deg, #ff1493, #00bfff);
             color: white;
             border: none;
             border-radius: 25px;
             padding: 12px 24px;
             font-weight: 600;
             cursor: pointer;
-            box-shadow: 0 4px 20px rgba(14, 165, 233, 0.4);
+            box-shadow: 0 10px 30px rgba(255, 20, 147, 0.3);
             text-decoration: none;
             transition: all 0.3s ease;
-            border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
         .btn-signup:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 30px rgba(14, 165, 233, 0.6);
-            background: linear-gradient(45deg, #38bdf8, #7dd3fc, #bae6fd);
+            box-shadow: 0 15px 40px rgba(255, 20, 147, 0.5);
         }
 
         /* Main Content */
@@ -655,12 +653,11 @@
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="images/BL.svg" alt="Bingebay Logo">
+                <img src="images/BL.svg" alt="Bingebay Logo" style="height:100px; width:auto; display:block;">
             </a>
         </div>
-
         <div class="auth-buttons">
-            <a href="index.html" class="btn-signup">Home</a>
+            <a href="Contact.html" class="btn btn-signup" target="_blank" rel="noopener">Contact Us</a>
         </div>
     </nav>
 
