--- a/terms.html
+++ b/terms.html
@@ -79,15 +79,7 @@
             height: var(--nav-height);
             display: flex;
             align-items: center;
-        }
-
-        .nav-content {
-            display: flex;
             justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            max-width: 1400px;
-            margin: 0 auto;
         }
 
         .logo {
@@ -319,6 +311,23 @@
             color: var(--text-white);
             font-size: 1.1rem;
             margin-bottom: 0.5rem;
+        }
+
+        .btn-signup {
+            background: linear-gradient(45deg, #ff1493, #00bfff);
+            color: white;
+            border: none;
+            border-radius: 25px;
+            padding: 12px 24px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 10px 30px rgba(255, 20, 147, 0.3);
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+        .btn-signup:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 15px 40px rgba(255, 20, 147, 0.5);
         }
 
         /* Back to top button */
@@ -555,11 +564,14 @@
     <a href="#main-content" class="skip-link">Skip to content</a>
 
     <!-- Navigation -->
-    <nav class="navbar" aria-label="Main navigation">
-        <div class="nav-content">
-            <a href="index.html" class="logo" aria-label="BingeBay Home">
-                <img src="images/BL.svg" alt="BingeBay Logo" class="logo-img">
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/BL.svg" alt="Bingebay Logo" style="height:100px; width:auto; display:block;">
             </a>
+        </div>
+        <div class="auth-buttons">
+            <a href="index.html" class="btn btn-signup" target="_blank" rel="noopener">Home</a>
         </div>
     </nav>
 
