Update: fixed header layout and replaced video

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bingebay - Ready, Set, Binge!</title>
+    <link rel="icon" type="image/svg+xml" href="images/BL.svg">
     <style>
         /* All your existing styles remain the same until .hero-section */
         * {
@@ -909,6 +910,18 @@
         }
         /* Keep all your other existing styles below */
     </style>
+    <meta name="description" content="Bingebay is Africa's home for streaming award-winning local series, blockbuster international movies, and exclusive content. Watch anywhere, anytime. Flexible payments. Become a provider.">
+    <meta name="keywords" content="Bingebay, streaming, Africa, movies, series, live events, local content, international movies, exclusive, provider, entertainment, TV, video, binge, online, flexible payments, subscribe, watch online">
+    <meta name="author" content="Bingebay">
+    <meta property="og:title" content="Bingebay - Ready, Set, Binge!">
+    <meta property="og:description" content="Africa's best entertainment: local series, blockbuster movies, live events, and more. Watch or become a provider.">
+    <meta property="og:image" content="images/bing1.png">
+    <meta property="og:url" content="">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bingebay - Ready, Set, Binge!">
+    <meta name="twitter:description" content="Africa's best entertainment: local series, blockbuster movies, live events, and more. Watch or become a provider.">
+    <meta name="twitter:image" content="images/bing1.png">
 </head>
 <body>
     <nav class="navbar">
